--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "files.insertFinalNewline": true,
     "workbench.colorTheme": "Community Material Theme Darker High Contrast",
     "terminal.integrated.defaultProfile.windows": "Git Bash",
-    "workbench.iconTheme": "material-icon-theme"
-    
+    "workbench.iconTheme": "material-icon-theme",
 }
+    
+
